# train-data-generator-xrpl-llm-experiment

dataset-generator/: .gitignore  .llmrc  AGENT.md  README.md  evaluation_results.jsonl  evaluation_summary.json  pyproject.toml  reset.sh  runAlignment.sh  runAll.sh  runCheckSequenceLenght.sh  runDatasetGeneration.sh  runEvals.sh  runTraining.sh
dataset-generator/.ipynb_checkpoints/: README-checkpoint.md
dataset-generator/config/: defaults.dev.json  defaults.json
dataset-generator/data/: base_schema_template.json  domain_prompts.jsonl  operator_catalog.json
dataset-generator/lib/: config.py  io.py  llm.py  parsing.py
dataset-generator/scripts/: build_alignment_pairs.py  build_schemas.py  build_training_corpus.py  check_sequence_length.py  evaluate_student.py  generate_dataset.py  generate_domain_specs.py  generate_example_queries.py  model_config.py  pretty_jsonl.py  report_training.py  test_inference_teacher.py  test_teacher.py  train_alignment_dpo.py  train_student_unsloth.py
