[project]
name = "dataset-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "bitsandbytes==0.48.0",
    "datasets",
    "evaluate",
    "flash-attn",
    "jsonschema",
    "matplotlib",
    "onnx",
    "pandas",
    "peft",
    "seaborn",
    "sentencepiece",
    "torch",
    "torchaudio",
    "torchvision",
    "transformers==4.56.2",
    "triton",
    "trl==0.22.2",
    "unsloth",
    "xformers",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
flash-attn = { path = "../../mlwheel/flash_attn-2.7.4-cp312-cp312-linux_aarch64.whl" }
xformers = { path = "../../mllib/xformers/dist/xformers-0.0.34+41531cee.d20251229-cp39-abi3-linux_aarch64.whl" }

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu130"
